--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,15 @@ h1 {
     color:chocolate;
     font-size: 40px
 }
+
+p {
+    text-align: center;
+    font-size: 30px;
+
+}
+
+img.Tower {
+width: 100%;
+
+
+}
